--- a/home.html
+++ b/home.html
@@ -227,11 +227,21 @@ html, body{height:auto}body{background-color:rgb(6, 48, 98, 1);;background-posit
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script><script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> <!-- <script type="text/javascript" src="https://countdown.agecalculator.me/js/countdown.js"></script> --> <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yosintv/yosintv/football/fc.js"></script> <script>$(function() {$("form").submit(function(){if($("#dt").val() == '') {alert("Please Select Date");$("#dt").focus();return false;}});$(".date").datepicker({defaultDate:'01-01-1990',dateFormat : 'dd-mm-yy',changeMonth: true,changeYear: true,yearRange: "-100:+0",showAnim: 'clip',showMonthAfterYear: true,maxDate: new Date()});});</script>
 </div>
 
+<div class='blog-posts hfeed'>
+<div class="date-outer">
+<div class="date-posts">
+    
+<div class='post-outer'>
+<div class='post hentry uncustomized-post-template' itemprop='blogPost' itemscope='itemscope' itemtype='http://schema.org/BlogPosting'>
+<a name='2150954513195216150'></a>
+<h3 class='post-title entry-title' itemprop='name'>
+Home
+</h3>
 
 
+<div class="countdown container">
 
-
-<!--
+<!-- 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -256,7 +266,46 @@ html, body{height:auto}body{background-color:rgb(6, 48, 98, 1);;background-posit
 	
 
 
+<div style='clear: both;'></div>
+</div>
+<div class='post-footer'>
+<div class='post-footer-line post-footer-line-1'>
+<span class='post-author vcard'>
+</span>
+<span class='post-timestamp'>
+</span>
+<span class='post-comment-link'>
+</span>
+<span class='post-icons'>
+<span class='item-control blog-admin pid-1643596893'>
+<a href='https://www.blogger.com/page-edit.g?blogID=2827499625628388886&pageID=2150954513195216150&from=pencil' title='Edit page'>
+<img alt='' class='icon-action' height='18' src='https://resources.blogblog.com/img/icon18_edit_allbkg.gif' width='18'/>
+</a>
+</span>
+</span>
+<div class='post-share-buttons goog-inline-block'>
+</div>
+</div>
+<div class='post-footer-line post-footer-line-2'>
+<span class='post-labels'>
+</span>
+</div>
+<div class='post-footer-line post-footer-line-3'>
+<span class='post-location'>
+</span>
+</div>
+</div>
+</div>
+<div class='comments' id='comments'>
+<a name='comments'></a>
+</div>
+</div>
+
+</div></div>
+</div>
 	
+</div></div>
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.28.0/luxon.min.js"></script>
@@ -499,10 +548,9 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 -->
 	
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1691514,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1691515,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
-
 
 	
  <footer class="py-4 bg-light">
