--- a/home.html
+++ b/home.html
@@ -574,7 +574,23 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 </div>
 </div>
 -->
-	
+
+<div class='container'>
+<div class='tabsbox'>
+<div class='box-title'>
+<h3><strong>DMCA - YoSinTV - Cricket | Football</strong></h3>
+</div>
+<div class='wdthbox'>
+<p>
+
+<b>YoSinTV</b> doesn't host any media content on it own site. Our site visitors might use external or third parties services to show content, (Example: Embedding media from sites like Bet365, Dailymotion , Streamable etc.) 
+We Notify all copyright owners, to discover that the links and media shared by visitors and contained within this site are hosted somewhere else on the web or embedded from other various sites like above. If you have any legal issues please contact appropriate media file owners/hosters.
+ </p>
+</div>
+</div>
+</div>
+
+
 <!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1691515,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
 </center>
