--- a/home.html
+++ b/home.html
@@ -125,7 +125,16 @@ per{text-align:center;position:absolute;top:-35px;left:0;right:0;} .notification
 <input id='menubtn' type='checkbox'/>
 <label class='menublabel op' for='menubtn'><span class='liwte'><span class='line line-1'></span><span class='line line-2'></span><span class='line line-3'></span></span></label>
 <ul class='nav linkm'>
-<label class='menublabel clo' for='menubtn'><div class='menulabc'>YoSinTV: Cricket | Football</div><span class='liwte'><span class='line line-1'></span><span class='line line-2'></span></span></label>
+<label class='menublabel clo' for='menubtn'><div class='menulabc'>Cricfoot: Sports &amp; News</div><span class='liwte'><span class='line line-1'></span><span class='line line-2'></span></span></label>
+<div class='top-header section' id='pages' name='------------'><div class='widget LinkList' data-version='2' id='LinkList21'>
+<div class='navsiteta'>
+<li class='siteta' data-cat=''><a href='/'><strong>Home page</strong></a></li>
+<li class='siteta' data-cat=''><a href='https://match-live-arabic-v6-ltr.blogspot.com/p/today-matches.html'><strong>Today matches</strong></a></li>
+<li class='siteta' data-cat=''><a href='https://wa.me/212669271321?text=via-mt7'><strong>Buy this theme</strong></a></li>
+<li class='siteta' data-cat=''><a href='https://m.yosin-tv.net/search'><strong>Blogs</strong></a></li>
+</div>
+</div></div>
+<div class='top-header section' id='social' name='------------'><div class='widget LinkList' data-version='2' id='LinkList1'>
 <div class='navsites'>
 <div class='dnmo' onclick='rdmode()'><div class='new'><span class='icon dnmoi'></span></div></div>
 <li class='sites facebook'><a aria-label='facebook' href='https://www.youtube.com/'><span class='icon facebook'></span>
@@ -144,6 +153,8 @@ per{text-align:center;position:absolute;top:-35px;left:0;right:0;} .notification
 </div></div>
 </ul>
 <div class='dnmo mo' onclick='rdmode()'><div class='new'><span class='icon dnmoi'></span></div></div>
+</div>
+</div>
 </div>
 
 
