--- a/home.html
+++ b/home.html
@@ -47,6 +47,11 @@
 <link href='https://cdn.jsdelivr.net/gh/iamsinghyogendra/yosintv/rosyotv.css' rel='stylesheet'/>
 <link href='https://yosintv2.github.io/ads/player.css' rel='stylesheet'/>
 
+<!--Monetag Ads -->
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),
+'https://zovidree.com/tag.min.js',7463304,document.body||document.documentElement)</script>
+
+ 
 <!-- Google tag (gtag.js) -->
 <script async='async' src='https://www.googletagmanager.com/gtag/js?id=G-YGTZ961YTZ'/>
 <script>
