--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <link href='https://cdn.jsdelivr.net/gh/iamsinghyogendra/yosintv/rosyotv.css' rel='stylesheet'/>
 <link href='https://yosintv2.github.io/ads/player.css' rel='stylesheet'/>
 
-<!--Monetag Ads -->
+<!--Monetag Ads 
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),
-'https://zovidree.com/tag.min.js',7463304,document.body||document.documentElement)</script>
+'https://zovidree.com/tag.min.js',7463304,document.body||document.documentElement)</script> -->
 
  
 <!-- Google tag (gtag.js) -->
