--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<script>
+function redirect() {
+window.location.href = "https://www.yosin-tv.net/cricket-live.html";
+}
+// Redirect after 3 seconds
+setTimeout(redirect, 3000);
+</script>
+
+
 <!DOCTYPE html>
 <html dir='ltr' lang='en' xmlns:fb='http://www.facebook.com/2008/fbml'>
 <head>
