--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@ YoSinTV Emoji
 <div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
 <ul>
 <li><a title="Home" itemprop="url" href="/">Smileys</a></li>
-<li><a title="Home" itemprop="url" href="/people.php">People & Body</a></li>
-<li><a title="Home" itemprop="url" href="/animals.php">Animals & Nature</a></li>
-<li><a title="Home" itemprop="url" href="/food.php">Food</a></li>
-<li><a title="Home" itemprop="url" href="/travel.php">Travel & Places</a></li>
-<li><a title="Home" itemprop="url" href="/activities.php">Activities</a></li>
-<li><a title="Home" itemprop="url" href="/objects.php">Objects</a></li>
-<li><a title="Home" itemprop="url" href="/symbols.php">Symbols</a></li>
-<li><a title="Home" itemprop="url" href="/flags.php">Flags</a></li>
+<li><a title="Home" itemprop="url" href="/people.html">People & Body</a></li>
+<li><a title="Home" itemprop="url" href="/animals.html">Animals & Nature</a></li>
+<li><a title="Home" itemprop="url" href="/food.html">Food</a></li>
+<li><a title="Home" itemprop="url" href="/travel.html">Travel & Places</a></li>
+<li><a title="Home" itemprop="url" href="/activities.html">Activities</a></li>
+<li><a title="Home" itemprop="url" href="/objects.html">Objects</a></li>
+<li><a title="Home" itemprop="url" href="/symbols.html">Symbols</a></li>
+<li><a title="Home" itemprop="url" href="/flags.html">Flags</a></li>
 </ul>
 </div>
 <div class="md-hide lg-hide">
@@ -2420,7 +2420,7 @@ In general, as long as you are using emojis in a non-infringing manner and not m
 <footer>
 <div class="footer-menu">
 <ul>
-<li><a href="/privacy.php">Privacy</a></li>
+<li><a href="/privacy.html">Privacy</a></li>
 </ul>
 </div>
 </footer>
