--- a/index.html
+++ b/index.html
@@ -2420,7 +2420,10 @@ In general, as long as you are using emojis in a non-infringing manner and not m
 <footer>
 <div class="footer-menu">
 <ul>
-<li><a href="/privacy.html">Privacy</a></li>
+<li><a href="/privacy.html">Privacy</a></li> |
+<li><a href="/privacy.html">About Us</a></li> |
+<li><a href="/privacy.html">Contact Us</a></li> |
+<li><a href="/privacy.html">Disclaimer Us</a></li>
 </ul>
 </div>
 </footer>
