--- a/index.html
+++ b/index.html
@@ -2420,10 +2420,13 @@ In general, as long as you are using emojis in a non-infringing manner and not m
 <footer>
 <div class="footer-menu">
 <ul>
+	
+<li><a href="/">Home</a></li> |
+<li><a href="/about.html">About Us</a></li> |
+<li><a href="/contact.html">Contact Us</a></li> |
+<li><a href="/disclaimer.html">Disclaimer </a></li> |
 <li><a href="/privacy.html">Privacy</a></li> |
-<li><a href="/privacy.html">About Us</a></li> |
-<li><a href="/privacy.html">Contact Us</a></li> |
-<li><a href="/privacy.html">Disclaimer Us</a></li>
+	
 </ul>
 </div>
 </footer>
