--- a/travel.html
+++ b/travel.html
@@ -320,14 +320,14 @@ Easy Emoji Copy
 <div class="menu xs-hide sm-hide" itemscope itemtype="https://schema.org/SiteNavigationElement">
 <ul>
 <li><a title="Home" itemprop="url" href="/">Smileys</a></li>
-<li><a title="Home" itemprop="url" href="/people.html">People & Body</a></li>
-<li><a title="Home" itemprop="url" href="/animals.html">Animals & Nature</a></li>
-<li><a title="Home" itemprop="url" href="/food.html">Food</a></li>
-<li><a title="Home" itemprop="url" href="/travel.html">Travel & Places</a></li>
-<li><a title="Home" itemprop="url" href="/activities.html">Activities</a></li>
-<li><a title="Home" itemprop="url" href="/objects.html">Objects</a></li>
-<li><a title="Home" itemprop="url" href="/symbols.html">Symbols</a></li>
-<li><a title="Home" itemprop="url" href="/flags.html">Flags</a></li>
+<li><a title="Home" itemprop="url" href="./people.html">People & Body</a></li>
+<li><a title="Home" itemprop="url" href="./animals.html">Animals & Nature</a></li>
+<li><a title="Home" itemprop="url" href="./food.html">Food</a></li>
+<li><a title="Home" itemprop="url" href="./travel.html">Travel & Places</a></li>
+<li><a title="Home" itemprop="url" href="./activities.html">Activities</a></li>
+<li><a title="Home" itemprop="url" href="./objects.html">Objects</a></li>
+<li><a title="Home" itemprop="url" href="./symbols.html">Symbols</a></li>
+<li><a title="Home" itemprop="url" href="./flags.html">Flags</a></li>
 </ul>
 </div>
 <div class="md-hide lg-hide">
