--- a/people.html
+++ b/people.html
@@ -35156,8 +35156,11 @@ YoSinTV Emoji
 <footer>
 <div class="footer-menu">
 <ul>
-<li><a href="/privacy.html">Privacy</a></li>
-</ul>
+<li><a href="/">Home</a></li> |
+<li><a href="/about.html">About Us</a></li> |
+<li><a href="/contact.html">Contact Us</a></li> |
+<li><a href="/disclaimer.html">Disclaimer </a></li> |
+<li><a href="/privacy.html">Privacy</a></li></ul>
 </div>
 </footer>
 <hr>
