--- a/activities.html
+++ b/activities.html
@@ -352,7 +352,7 @@ YoSinTV Emoji
 </div>
 </div>
 </form>
-<center><h3>✂️ Copy and 📋 Paste Emoji 👍 No apps required</h3></center>
+<center><h3>✂️✂️ Copy and 📋 Paste Emoji 👍 Android TV | Mobile</h3></center>
 <center><h3>Click on emoji to copy</h3></center><div class="row" style="text-align:center !important;">
 <div class="sec-head-row text-center">
 <div class="sec-head">
