--- a/privacy.html
+++ b/privacy.html
@@ -342,17 +342,7 @@ YoSinTV Emoji
 </div>
 </header>
 </div>
-<div class="container-fuild" style="margin-left:2%; margin-right:2%">
-<form method="post" action="/">
-<div class="row shadow-box" style="background:#fff; color:#FFFFFF;padding-right:0px;">
-<div class="col-md-6 col-md-offset-3 text-center">
-<input type="text" class="form-control" style="font-size:20px;height:45.5px;" placeholder="Find emojis by name" name="emoji" id="emoji" required="required" value>
-<span class="input-group-btn">
-<button class="btn btn-lg btn-success findemoji" type="submit"><i class="fa fa-search"></i></button>
-</span>
-</div>
-</div>
-</form>
+
 
   
 <div style="height:40px;"></div>
@@ -361,7 +351,8 @@ YoSinTV Emoji
 <div class="row">
 <div class="xs-12" style="text-align:left;color:#ffffff">
 
-  <h1>Privacy Policy</h1>
+<!-- Content Starts-->
+<h1>Privacy Policy</h1>
 <p>Last updated: June 05, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
@@ -534,7 +525,7 @@ YoSinTV Emoji
 <ul>
 <li>By email: mail@yosintv.net</li>
 </ul>
-
+<!-- Content Ends-->
   
 <hr/>
 <footer>
@@ -561,4 +552,6 @@ YoSinTV Emoji
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="https://fancy-fonts.iamrohit.in/lib/clipboard.min.js" type="text/javascript"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147" crossorigin="anonymous"></script>
-<script>(function(){if (!document.body) return;var js = "window['__CF$cv$params']={r:'88efa5e8cec78083',t:'MTcxNzU4NTExMi42NDYwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body></html>
+<script>(function(){if (!document.body) return;var js = "window['__CF$cv$params']={r:'88efa5e8cec78083',t:'MTcxNzU4NTExMi42NDYwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script>
+</body>
+</html>
