--- a/privacy.html
+++ b/privacy.html
@@ -527,7 +527,7 @@ GetEmoji.Online
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: mail@yosintv.net</li>
+<li>By email: mail@getemoji.online</li>
 </ul>
 <!-- Content Ends-->
   
