--- a/index.html
+++ b/index.html
@@ -2434,6 +2434,7 @@ In general, as long as you are using emojis in a non-infringing manner and not m
 <li><a href="/about.html">About Us</a></li> |
 <li><a href="/contact.html">Contact Us</a></li> |
 <li><a href="/disclaimer.html">Disclaimer </a></li> |
+<li><a href="/terms-conditons.html">Terms & Conditions </a></li> |
 <li><a href="/privacy.html">Privacy</a></li>
 	
 </ul>
