--- a/privacy.html
+++ b/privacy.html
@@ -540,6 +540,7 @@ GetEmoji.Online
 <li><a href="/about.html">About Us</a></li> |
 <li><a href="/contact.html">Contact Us</a></li> |
 <li><a href="/disclaimer.html">Disclaimer </a></li> |
+<li><a href="/terms-conditions.html">Terms & Conditions </a></li> |
 <li><a href="/privacy.html">Privacy</a></li>
 	
 </ul>
