--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<title> GetEmoji.Online - Copy Paste All Emojis For PC/laptop </title>
+<title> GetEmoji.Online - Terms & COnditions </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1">
 <meta name="google-site-verification" content="Gt1XIKLzd1w-Y589F8_jUR0MGQWCUf3CsLoyzvp9pOI" />
@@ -398,6 +398,7 @@ GetEmoji.Online
 <li><a href="/about.html">About Us</a></li> |
 <li><a href="/contact.html">Contact Us</a></li> |
 <li><a href="/disclaimer.html">Disclaimer </a></li> |
+<li><a href="/terms-conditions.html">Terms & Conditions </a></li> |
 <li><a href="/privacy.html">Privacy</a></li>
 	
 </ul>
