--- a/kaoemoji/happy-excited-kaoemojis.html
+++ b/kaoemoji/happy-excited-kaoemojis.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,12 @@
     <title>Happy/Excited KaoEmojis</title>
     <!-- Bootstrap Chttps://github.com/yosintv3/emojionline/tree/mainSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
+
+
+
     <style>
         .emoji-box {
             padding: 10px;
@@ -95,18 +102,14 @@
                 const adCol = document.createElement('div');
                 adCol.className = 'col-12'; // Full-width for the ad slot
                 adCol.innerHTML = `<div class="ad-slot"> 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
-     crossorigin="anonymous"></script>
-<!-- Ressponsive -->
+
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5525538810839147"
      data-ad-slot="4345862479"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script> </div>`;
+  </div>`;
                 emojiContainer.appendChild(adCol);
             }
         });
@@ -124,5 +127,11 @@
             setTimeout(() => alert.style.display = "none", 1000);
         }
     </script>
+    
+         <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 </body>
 </html>
