--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -60,14 +60,14 @@
     <!-- Horizontal Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">EmojiWorld</a>
+            <a class="navbar-brand" href="#"> KaoEmoji</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="https://www.getemoji.online/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#emojis">Emojis</a>
