--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -93,6 +93,7 @@
     <div class="container mt-4" id="emojis">
         <h2 class="text-center mb-4">Emoji Grid with Ads and Copy Function</h2>
         <div class="row">
+            
             <!-- First 9 Emojis -->
             <div class="col-4">
                 <div class="emoji-box">
@@ -110,75 +111,128 @@
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(ಠ_ಠ)</span>
-                    <button onclick="copyEmoji('(ಠ_ಠ)', this)">Copy</button>
+                    <span class="emoji">(✿◠‿◠)</span>
+                    <button onclick="copyEmoji('(✿◠‿◠)', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(ಥ﹏ಥ)</span>
-                    <button onclick="copyEmoji('(ಥ﹏ಥ)', this)">Copy</button>
+                    <span class="emoji">(☞ﾟヮﾟ)☞</span>
+                    <button onclick="copyEmoji('(☞ﾟヮﾟ)☞', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(¬_¬)</span>
-                    <button onclick="copyEmoji('(¬_¬)', this)">Copy</button>
+                    <span class="emoji">(ノ◕ヮ◕)ノ*:･ﾟ✧</span>
+                    <button onclick="copyEmoji('(ノ◕ヮ◕)ノ*:･ﾟ✧', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(ʘ‿ʘ)</span>
-                    <button onclick="copyEmoji('(ʘ‿ʘ)', this)">Copy</button>
+                    <span class="emoji">(≧◡≦)</span>
+                    <button onclick="copyEmoji('(≧◡≦)', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(ง ͠° ͟ل͜ ͡°)ง</span>
-                    <button onclick="copyEmoji('(ง ͠° ͟ل͜ ͡°)ง', this)">Copy</button>
+                    <span class="emoji">(✧ω✧)</span>
+                    <button onclick="copyEmoji('(✧ω✧)', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(•_•) ( •_•)>⌐■-■ (⌐■_■)</span>
-                    <button onclick="copyEmoji('(•_•) ( •_•)>⌐■-■ (⌐■_■)', this)">Copy</button>
+                    <span class="emoji">(ᵔᴥᵔ)</span>
+                    <button onclick="copyEmoji('(ᵔᴥᵔ)', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="emoji-box">
-                    <span class="emoji">(✿◕‿◕)</span>
-                    <button onclick="copyEmoji('(✿◕‿◕)', this)">Copy</button>
+                    <span class="emoji">(◕‿◕✿)</span>
+                    <button onclick="copyEmoji('(◕‿◕✿)', this)">Copy</button>
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
 
             <!-- Ad Slot -->
-            <div class="col-12" id="ads">
-                <div class="ad-slot">
-                  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
-     crossorigin="anonymous"></script>
-<!-- Ressponsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5525538810839147"
-     data-ad-slot="4345862479"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+            <div class="col-12">
+                <div class="ad-slot">Ad Space - Your Ad Here</div>
+            </div>
+
+            <!-- Next 9 Emojis -->
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(ﾉ◕ヮ◕)ﾉ</span>
+                    <button onclick="copyEmoji('(ﾉ◕ヮ◕)ﾉ', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(✿╹◡╹)</span>
+                    <button onclick="copyEmoji('(✿╹◡╹)', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(ﾉﾟ▽ﾟ)ﾉ</span>
+                    <button onclick="copyEmoji('(ﾉﾟ▽ﾟ)ﾉ', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(｡♥‿♥｡)</span>
+                    <button onclick="copyEmoji('(｡♥‿♥｡)', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(✧≖‿ゝ≖)</span>
+                    <button onclick="copyEmoji('(✧≖‿ゝ≖)', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(｡•̀ᴗ-)✧</span>
+                    <button onclick="copyEmoji('(｡•̀ᴗ-)✧', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">٩(◕‿◕｡)۶</span>
+                    <button onclick="copyEmoji('٩(◕‿◕｡)۶', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">(づ｡◕‿‿◕｡)づ</span>
+                    <button onclick="copyEmoji('(づ｡◕‿‿◕｡)づ', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="emoji-box">
+                    <span class="emoji">ʕ•ᴥ•ʔ</span>
+                    <button onclick="copyEmoji('ʕ•ᴥ•ʔ', this)">Copy</button>
+                    <div class="copy-alert">Copied!</div>
                 </div>
             </div>
 
-            <!-- Add more emoji rows and ads as needed -->
-        </div>
-    </div>
+            <!-- Ad Slot -->
+            <div class="col-12">
+                <div class="ad-slot">Ad Space - Your Ad Here</div>
+            </div>
 
     <!-- Copy Function Script -->
     <script>
