--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -3,7 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Navbar with Emojis</title>
+    <meta name="description" content="Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
+    <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
+    <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
+    <meta property="og:image" content="your-image-url.jpg">
+    <meta property="og:url" content="http://www.kaoemoji.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
+    <meta name="twitter:image" content="your-image-url.jpg">
+    <meta name="robots" content="index, follow">
+
+    <!-- Schema.org markup for Google+ -->
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebPage",
+            "name": "KaoEmoji",
+            "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
+            "url": "http://www.kaoemoji.com",
+            "image": "your-image-url.jpg",
+            "publisher": {
+                "@type": "Organization",
+                "name": "KaoEmoji"
+            },
+            "mainEntityOfPage": "http://www.kaoemoji.com"
+        }
+    </script>
+
+    <title>KaoEmoji - Fun and Creative Text-Based Emojis</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -54,34 +84,46 @@
         button:hover {
             background-color: #0056b3;
         }
+        .seo-content {
+            padding: 30px;
+            background-color: #f1f1f1;
+        }
+        .seo-content img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <!-- Horizontal Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"> KaoEmoji</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="https://www.getemoji.online/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#emojis">Emojis</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ads">Ads</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
+
+
+<!-- Updated Navbar Section (Dark Themed) -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">KaoEmoji</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="https://www.getemoji.online/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#emojis">Emojis</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#ads">Ads</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- Header Section -->
     <header class="header">
@@ -89,11 +131,67 @@
         <p>Your ultimate destination for Kao Emojis, fun expressions, and creative text art!</p>
     </header>
 
-    <!-- Emoji Grid -->
+
+<!-- 2x2 Button Grid Before "Why Kao Emojis Are So Popular" Section -->
+<div class="container mt-4">
+    <div class="row">
+        <!-- First Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Link 1</a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Link 1</a>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Second Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Link 1</a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Link 1</a>
+        </div>
+    </div>
+</div>
+
+
+    <!-- SEO Content Section -->
+    <div class="container mt-4 seo-content">
+        <h2 class="text-center mb-4">What Are Kao Emojis?</h2>
+        <p>Kao Emojis, also known as text-based emoticons or "kaomoji," are a form of creative text art that originated in Japan. They are used to express emotions, reactions, or simple playful gestures through characters and symbols. These emojis have become a global phenomenon, adding personality and charm to digital communication.</p>
+        <p>Unlike traditional emoji characters, Kao Emojis are composed of keyboard characters, making them a fun and unique way to express emotions online. From happy faces to quirky animals, there's a Kao Emoji for every mood and situation!</p>
+        <h3>Popular Kao Emojis You Can Use</h3>
+        <p>Here are some popular Kao Emojis to get you started:</p>
+        <ul>
+            <li>( ͡° ͜ʖ ͡°) - The "Lenny Face"</li>
+            <li>¯\\_(ツ)_/¯ - The "Shrug" Emoji</li>
+            <li>(✿◠‿◠) - The "Happy Face" Emoji</li>
+            <li>(ノ◕ヮ◕)ノ*:･ﾟ✧ - The "Excited" Emoji</li>
+        </ul>
+
+        <h3>Why Kao Emojis Are So Popular</h3>
+        <p>Kao Emojis have gained popularity because they allow users to express emotions in a creative, fun, and unique way. They are often used in social media posts, messages, and comments to add personality and humor. Additionally, their easy accessibility and fun nature make them a great tool for online communication.</p>
+
+        <h3>How to Copy and Share Kao Emojis</h3>
+        <p>On our website, you can easily copy your favorite Kao Emojis by clicking the "Copy" button next to each one. Simply paste them into your social media posts, text messages, or emails to add some flair to your conversations!</p>
+
+        <p>Explore our full collection and discover more fun and expressive Kao Emojis that will bring your online conversations to life!</p>
+
+        <!-- Add Images -->
+        <div class="row">
+            <div class="col-md-6">
+                <img src="image1.jpg" alt="Kao Emojis Collection" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <img src="image2.jpg" alt="Fun Kao Emojis in Action" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <!-- Emoji Grid (Unchanged) -->
     <div class="container mt-4" id="emojis">
         <h2 class="text-center mb-4">Emoji Grid with Ads and Copy Function</h2>
         <div class="row">
-            
             <!-- First 9 Emojis -->
             <div class="col-4">
                 <div class="emoji-box">
@@ -158,101 +256,27 @@
                     <div class="copy-alert">Copied!</div>
                 </div>
             </div>
-
-            <!-- Ad Slot -->
-            <div class="col-12">
-                <div class="ad-slot">Ad Space - Your Ad Here</div>
-            </div>
-
-            <!-- Next 9 Emojis -->
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(ﾉ◕ヮ◕)ﾉ</span>
-                    <button onclick="copyEmoji('(ﾉ◕ヮ◕)ﾉ', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(✿╹◡╹)</span>
-                    <button onclick="copyEmoji('(✿╹◡╹)', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(ﾉﾟ▽ﾟ)ﾉ</span>
-                    <button onclick="copyEmoji('(ﾉﾟ▽ﾟ)ﾉ', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(｡♥‿♥｡)</span>
-                    <button onclick="copyEmoji('(｡♥‿♥｡)', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(✧≖‿ゝ≖)</span>
-                    <button onclick="copyEmoji('(✧≖‿ゝ≖)', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(｡•̀ᴗ-)✧</span>
-                    <button onclick="copyEmoji('(｡•̀ᴗ-)✧', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">٩(◕‿◕｡)۶</span>
-                    <button onclick="copyEmoji('٩(◕‿◕｡)۶', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">(づ｡◕‿‿◕｡)づ</span>
-                    <button onclick="copyEmoji('(づ｡◕‿‿◕｡)づ', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="emoji-box">
-                    <span class="emoji">ʕ•ᴥ•ʔ</span>
-                    <button onclick="copyEmoji('ʕ•ᴥ•ʔ', this)">Copy</button>
-                    <div class="copy-alert">Copied!</div>
-                </div>
-            </div>
-
-            <!-- Ad Slot -->
-            <div class="col-12">
-                <div class="ad-slot">Ad Space - Your Ad Here</div>
-            </div>
+        </div>
+          <div class="ad-slot">Ad Space - Your Ad Here</div>
+    </div>
 
     <!-- Copy Function Script -->
     <script>
         function copyEmoji(emoji, button) {
-            // Create a temporary input to copy the emoji text
             const tempInput = document.createElement("input");
             document.body.appendChild(tempInput);
             tempInput.value = emoji;
             tempInput.select();
             document.execCommand("copy");
             document.body.removeChild(tempInput);
-
-            // Show "Copied!" alert
             const alert = button.nextElementSibling;
             alert.style.display = "block";
             setTimeout(() => {
                 alert.style.display = "none";
-            }, 1000); // Hide after 1 second
+            }, 1000);
         }
     </script>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
