--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -257,7 +257,22 @@
                 </div>
             </div>
         </div>
-          <div class="ad-slot">Ad Space - Your Ad Here</div>
+        
+          <div class="ad-slot">
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
+<!-- Ressponsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+              
+    </div>
     </div>
 
     <!-- Copy Function Script -->
