--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -137,19 +137,31 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Link 1</a>
+            <a href="#" class="btn btn-primary w-100"> Positive KaoEmoji </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Link 1</a>
+            <a href="#" class="btn btn-primary w-100"> Negative KaoEmoji </a>
         </div>
     </div>
+    
     <div class="row">
         <!-- Second Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Link 1</a>
+            <a href="#" class="btn btn-primary w-100">Neutral KaoEmoji 1</a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Link 1</a>
+            <a href="#" class="btn btn-primary w-100"> Various KaoEmoji</a>
+        </div>
+    </div>
+</div>
+
+    <div class="row">
+        <!-- Second Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100"> Animals KaoEmoji </a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100"> Other KaoEmoji </a>
         </div>
     </div>
 </div>
