--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -133,38 +133,39 @@
 
 
 <!-- 2x2 Button Grid Before "Why Kao Emojis Are So Popular" Section -->
-<div class="container mt-4">
+<div class="container mt-6">
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100"> Positive KaoEmoji </a>
+            <a href="#" class="btn btn-primary w-100">Positive KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100"> Negative KaoEmoji </a>
+            <a href="#" class="btn btn-primary w-100">Negative KaoEmojis </a>
         </div>
     </div>
     
     <div class="row">
         <!-- Second Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Neutral KaoEmoji 1</a>
+            <a href="#" class="btn btn-primary w-100">Neutral KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100"> Various KaoEmoji</a>
+            <a href="#" class="btn btn-primary w-100">Various KaoEmojis </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Third Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Animals KaoEmojis </a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Other KaoEmojis </a>
         </div>
     </div>
 </div>
 
-    <div class="row">
-        <!-- Second Row of 2 Buttons -->
-        <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100"> Animals KaoEmoji </a>
-        </div>
-        <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100"> Other KaoEmoji </a>
-        </div>
-    </div>
-</div>
+
 
 
     <!-- SEO Content Section -->
