--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -101,17 +101,17 @@
 <!-- Updated Navbar Section (Dark Themed) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">KaoEmoji</a>
+        <a class="navbar-brand" href="https://www.getemoji.online/kaoemoji/">KaoEmoji</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="https://www.getemoji.online/">Home</a>
+                    <a class="nav-link active" href="https://www.getemoji.online/kaoemoji/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#emojis">Emojis</a>
+                    <a class="nav-link" href="https://www.getemoji.online/">Online Emoji</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#ads">Ads</a>
