--- a/kaoemoji/index.html
+++ b/kaoemoji/index.html
@@ -203,7 +203,7 @@
 
     <!-- Emoji Grid (Unchanged) -->
     <div class="container mt-4" id="emojis">
-        <h2 class="text-center mb-4">Emoji Grid with Ads and Copy Function</h2>
+        <h2 class="text-center mb-4">Famous KaoEmojis</h2>
         <div class="row">
             <!-- First 9 Emojis -->
             <div class="col-4">
