--- a/kaoemoji/joy.html
+++ b/kaoemoji/joy.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
     <meta property="og:image" content="your-image-url.jpg">
-    <meta property="og:url" content="http://www.getemoji.online">
+    <meta property="og:url" content="http://www.getemoji.online/kaoemoji">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
@@ -22,13 +22,13 @@
             "@type": "WebPage",
             "name": "KaoEmoji",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
-            "url": "http://www.getemoji.online",
+            "url": "http://www.getemoji.online/kaoemoji",
             "image": "your-image-url.jpg",
             "publisher": {
                 "@type": "Organization",
                 "name": "KaoEmoji"
             },
-            "mainEntityOfPage": "http://www.getemoji.online"
+            "mainEntityOfPage": "http://www.getemoji.online/kaoemoji"
         }
     </script>
 
