--- a/kaoemoji/joy.html
+++ b/kaoemoji/joy.html
@@ -542,6 +542,117 @@
 <!-- KaeEmoji Ends -->
 
 
+   <!-- KaeEmoji Starts -->
+<div class="row">  
+
+
+
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Calm happy face Kaoemoji">(o˘◡˘o)</span>
+    <button onclick="copyEmoji('(o˘◡˘o)', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Excited starry face Kaoemoji">\\(★ω★)/</span>
+    <button onclick="copyEmoji('\\(★ω★)/', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Joyful waving hands Kaoemoji">\\(^ヮ^)/</span>
+    <button onclick="copyEmoji('\\(^ヮ^)/', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Playful excited face Kaoemoji">(〃＾▽＾〃)</span>
+    <button onclick="copyEmoji('(〃＾▽＾〃)', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Confident cheerful face Kaoemoji">(╯✧▽✧)╯</span>
+    <button onclick="copyEmoji('(╯✧▽✧)╯', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Energetic cheerful face Kaoemoji">o(>ω<)o</span>
+    <button onclick="copyEmoji('o(>ω<)o', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Cheerful joyful dance Kaoemoji">o( ❛ᴗ❛ )o</span>
+    <button onclick="copyEmoji('o( ❛ᴗ❛ )o', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Laughing joyful face Kaoemoji">｡ﾟ(TヮT)ﾟ｡</span>
+    <button onclick="copyEmoji('｡ﾟ(TヮT)ﾟ｡', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Satisfied joyful face Kaoemoji">( ‾́ ◡ ‾́ )</span>
+    <button onclick="copyEmoji('( ‾́ ◡ ‾́ )', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Celebratory cheerful face Kaoemoji">(ﾉ´ヮ`)ﾉ*: ･ﾟ</span>
+    <button onclick="copyEmoji('(ﾉ´ヮ`)ﾉ*: ･ﾟ', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Confident thumbs-up Kaoemoji">(b ᵔ▽ᵔ)b</span>
+    <button onclick="copyEmoji('(b ᵔ▽ᵔ)b', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+<div class="col-4">
+  <div class="emoji-box">
+    <span class="emoji" title="Excited and happy Kaoemoji">(๑˃ᴗ˂)ﻭ</span>
+    <button onclick="copyEmoji('(๑˃ᴗ˂)ﻭ', this)">Copy</button>
+    <div class="copy-alert">Copied!</div>
+  </div>
+</div>
+
+  
+
+<!-- Ad Slot -->
+<div class="ad-slot">
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
+<!-- Ressponsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+              
+</div>
+</div>
+<!-- KaeEmoji Ends -->
+
     
   
     <!-- SEO Content Section -->
