--- a/kaoemoji/joy.html
+++ b/kaoemoji/joy.html
@@ -36,81 +36,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .header {
-            background-color: #f8f9fa;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .emoji-box {
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            text-align: center;
-            background-color: #f9f9f9;
-            margin-bottom: 15px;
-        }
-        .emoji {
-            font-size: 24px;
-            margin-bottom: 10px;
-            display: block;
-        }
-        .copy-alert {
-            color: green;
-            font-size: 14px;
-            margin-top: 5px;
-            display: none;
-        }
-        .ad-slot {
-            padding: 20px;
-            border: 2px dashed #ccc;
-            text-align: center;
-            font-weight: bold;
-            color: #666;
-            margin-bottom: 15px;
-            background-color: #f5f5f5;
-        }
-        button {
-            padding: 5px 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .seo-content {
-            padding: 30px;
-            background-color: #f1f1f1;
-        }
-        .seo-content img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-        
-                /* Footer Styles */
-        footer {
-            background-color: #343a40;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        footer a {
-            color: #f8f9fa;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-        
-    </style>
+    <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
 </head>
 <body>
 
