--- a/index.html
+++ b/index.html
@@ -288,6 +288,20 @@
     </div>
     </div>
 
+
+    <!-- Footer Section -->
+<footer>
+    <p>&copy; 2024 KaoEmoji. All rights reserved.</p>
+    <p>
+        <a href="/privacy-policy">Privacy Policy</a> | 
+        <a href="/terms-of-service">Terms of Service</a> | 
+        <a href="/about-us">About Us</a>
+    </p>
+    
+</footer>
+
+
+    
     <!-- Copy Function Script -->
     <script>
         function copyEmoji(emoji, button) {
