--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
     </script>
 
-    <title>KaoEmoji - Fun and Creative Text-Based Emojis</title>
+    <title>KaoEmoji - Fun and Creative Text-Based Emojis | GetEmoji.Online </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
