--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
     <meta property="og:image" content="your-image-url.jpg">
-    <meta property="og:url" content="http://www.kaoemoji.com">
+    <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
@@ -22,13 +22,13 @@
             "@type": "WebPage",
             "name": "KaoEmoji",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
-            "url": "http://www.kaoemoji.com",
+            "url": "http://www.getemoji.online/",
             "image": "your-image-url.jpg",
             "publisher": {
                 "@type": "Organization",
-                "name": "KaoEmoji"
+                "name": "GetEmoji.Online"
             },
-            "mainEntityOfPage": "http://www.kaoemoji.com"
+            "mainEntityOfPage": "http://www.getemoji.online/"
         }
     </script>
 
@@ -127,7 +127,7 @@
 
     <!-- Header Section -->
     <header class="header">
-        <h1>Welcome to EmojiWorld</h1>
+        <h1>Welcome to KaoEmojis World</h1>
         <p>Your ultimate destination for Kao Emojis, fun expressions, and creative text art!</p>
     </header>
 
@@ -203,7 +203,7 @@
 
     <!-- Emoji Grid (Unchanged) -->
     <div class="container mt-4" id="emojis">
-        <h2 class="text-center mb-4">Famous KaoEmojis</h2>
+        <h2 class="text-center mb-4"> Demo KaoEmojis </h2>
         <div class="row">
             <!-- First 9 Emojis -->
             <div class="col-4">
