--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
     <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
-    <meta property="og:image" content="your-image-url.jpg">
+    <meta property="og:image" content="https://www.getemoji.online/feature.png">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
@@ -20,10 +20,10 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "name": "KaoEmoji",
+            "name": "KaoEmoji | GetEmoji.Online",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
             "url": "http://www.getemoji.online/",
-            "image": "your-image-url.jpg",
+            "image": "https://www.getemoji.online/feature.png",
             "publisher": {
                 "@type": "Organization",
                 "name": "GetEmoji.Online"
