--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
-    <meta name="twitter:image" content="your-image-url.jpg">
+    <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
     <meta name="robots" content="index, follow">
 
     <!-- Schema.org markup for Google+ -->
