--- a/kaoemoji/joy.html
+++ b/kaoemoji/joy.html
@@ -7,12 +7,12 @@
     <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
     <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
-    <meta property="og:image" content="your-image-url.jpg">
-    <meta property="og:url" content="http://www.getemoji.online/kaoemoji">
+    <meta property="og:image" content="https://www.getemoji.online/feature.png">
+    <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
-    <meta name="twitter:image" content="your-image-url.jpg">
+    <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
     <meta name="robots" content="index, follow">
 
     <!-- Schema.org markup for Google+ -->
@@ -20,15 +20,15 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "name": "KaoEmoji",
+            "name": "KaoEmoji | GetEmoji.Online",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
-            "url": "http://www.getemoji.online/kaoemoji",
-            "image": "your-image-url.jpg",
+            "url": "http://www.getemoji.online/",
+            "image": "https://www.getemoji.online/feature.png",
             "publisher": {
                 "@type": "Organization",
-                "name": "KaoEmoji"
+                "name": "GetEmoji.Online"
             },
-            "mainEntityOfPage": "http://www.getemoji.online/kaoemoji"
+            "mainEntityOfPage": "http://www.getemoji.online/"
         }
     </script>
 
