--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Positive KaoEmojis </a>
+            <a href="/positive/" class="btn btn-primary w-100">Positive KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
             <a href="#" class="btn btn-primary w-100">Negative KaoEmojis </a>
