--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <!-- Add Images -->
         <div class="row">
             <div class="col-md-6">
-                <img src="image1.jpg" alt="Kao Emojis Collection" class="img-fluid">
+                <img src="https://www.getemoji.online/image1.jpg" alt="Kao Emojis Collection | getemoji.online " class="img-fluid">
             </div>
             <div class="col-md-6">
-                <img src="image2.jpg" alt="Fun Kao Emojis in Action" class="img-fluid">
+                <img src="https://www.getemoji.online/image1.jpg" alt="Fun Kao Emojis in Action | getemoji.online " class="img-fluid">
             </div>
         </div>
     </div>
