--- a/positive/index.html
+++ b/positive/index.html
@@ -150,25 +150,25 @@
     <h3>Conclusion</h3>
     <p>Positive Kao Emojis are a fun and creative way to share positive emotions and brighten up digital conversations. By combining simple keyboard characters and symbols, these emoticons allow users to express joy, excitement, gratitude, and many other uplifting emotions. Whether you're celebrating a personal achievement, congratulating a friend, or simply spreading good vibes, Positive Kao Emojis are the perfect way to make your online communication more engaging, warm, and personal. Explore the world of Positive Kao Emojis today and start spreading positivity in every message!</p>
 
-    <!-- Add Images -->
-    <div class="row">
-        <div class="col-md-6">
-            <img src="image1.jpg" alt="Positive Kao Emojis Collection" class="img-fluid">
-        </div>
-        <div class="col-md-6">
-            <img src="image2.jpg" alt="Positive Kao Emojis in Action" class="img-fluid">
+        <!-- Add Images -->
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://www.getemoji.online/image1.jpg" alt="Kao Emojis Collection | getemoji.online " class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <img src="https://www.getemoji.online/image1.jpg" alt="Fun Kao Emojis in Action | getemoji.online " class="img-fluid">
+            </div>
         </div>
     </div>
-</div>
 
 
     <!-- Emoji Grid (Unchanged) -->
-    <div class="container mt-4" id="emojis">
-        <h2 class="text-center mb-4">  Positive KaoEmojis Demo </h2>
+ <div class="container mt-4" id="emojis">
+ <h2 class="text-center mb-4">  Positive KaoEmojis Demo </h2>
 
 
         
-       <!-- KaeEmoji Starts -->
+ <!-- KaeEmoji Starts -->
 <div class="row">  
 
 
